Refactoring of save-and-restore code